# MF_BTR

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mf_3d.py  mf_3d_read_field.cpp
include/: Interpolation.h  Interpolation.hpp  MF.h  MF.hpp  mf_3d.h
include/mf/: MF.hpp
python/: mf_python.cpp
src/: get_field.cpp  interpolate_field.cpp  interpolation.cpp  interpolation_constants.cpp  interpolation_matrices.cpp  main.cpp  mf_3d_get.cpp  mf_3d_interpolation.cpp  mf_3d_python.cpp  mf_3d_read_field.cpp  mf_python.cpp  read_field.cpp
src/interpolation/: interpolation.cpp  interpolation_constants.cpp
src/mf/: get_field.cpp  interpolate_field.cpp  read_field.cpp
test/: main.py  preparations.py  test_mf_3d_creation.py  test_mf_3d_field_processing.py
tests/: main.py  preparations.py  test_mf_3d_creation.py  test_mf_3d_field_processing.py
